contacts&footer left

--- a/styles_scss/_header.scss
+++ b/styles_scss/_header.scss
@@ -1,7 +1,7 @@
 header{
+    margin: px2v(40) 0;
     .header_container{
-        width: 90%;
-        margin: 0 auto;
+        @include container_90;
         color: #002361;
         font-weight: 400;
         font-size: px2v(27);
@@ -15,6 +15,9 @@ header{
         nav{
             display: flex;
             gap: px2v(90);
+            a{
+                height: px2v(40);
+            }
         }
     }
 }
