--- a/styles_scss/_banner.scss
+++ b/styles_scss/_banner.scss
@@ -1,13 +1,14 @@
 .banner{
-    width: 100%;
-    height: px2v(862);
+    @include section_size(1920,862);
     background-image: url("/assets/banner.png");
     .banner_container{
-        padding: 10%;
+        padding-left: 5%;
+        padding-top: 15%;
         h1{
             color: #fff;
             font-weight: 700;
             font-size: px2v(70);
+            width: px2v(1500);
         }
     }
 }
