--- a/styles_scss/_contacts.scss
+++ b/styles_scss/_contacts.scss
@@ -1,16 +1,37 @@
 .contacts{
+    @include section_size(1920,653);
     .contacts_container{
+        @include container_85;
         .contacts_header{
-
+            @include header;
+            margin: px2v(176) 0 px2v(90);
         }
         .contacts_content{
+            display: flex;
+            gap: px2v(100);
+            margin-left: px2v(80);
             .contact{
                 .contact_header{
-
+                    font-weight: 600;
+                    font-size: px2v(25);
+                    margin-bottom: px2v(15);
                 }
                 .contact_content{
-
+                    overflow-y: hidden;
+                    height: px2v(100);
+                    font-weight: 500;
+                    font-size: px2v(25);
                 }
+            }
+            .contact:last-of-type{
+                .contact_content{
+                    display: flex;
+                    gap: px2v(25);
+                    img{
+                        width: px2v(35);
+                        height: px2v(35);
+                    }
+                }   
             }
         }
     }
