--- a/styles_scss/_guarantees.scss
+++ b/styles_scss/_guarantees.scss
@@ -13,7 +13,7 @@
                 width: px2v(500);
                 height: px2v(420);
                 text-align: center;
-                margin: 0 45px 40px 0;
+                margin: 40px 45px 40px 0;
                 border: px2v(3) solid #002361;
                 box-shadow: px2v(10) px2v(4) px2v(45) rgba(38, 104, 218, 0.31);
                 border-radius: px2v(25);
