--- a/styles_scss/_guarantees.scss
+++ b/styles_scss/_guarantees.scss
@@ -1,7 +1,7 @@
 .guarantees{
-    @include section_size(1920,1006);
+    @include size(1920,1006);
     .guarantees_container{
-        @include container_90;
+        @include container(90%);
         .guarantees_header{
             @include header;
             padding: px2v(174) 0 px2v(90);
@@ -10,22 +10,52 @@
             display: flex;
             gap: px2v(100);
             .guarantee{
-                width: px2v(500);
-                height: px2v(420);
+                @include size(500,420);
                 text-align: center;
-                margin: 40px 45px 40px 0;
+                margin: px2v(40) px2v(45) px2v(40);
                 border: px2v(3) solid #002361;
                 box-shadow: px2v(10) px2v(4) px2v(45) rgba(38, 104, 218, 0.31);
                 border-radius: px2v(25);
                 overflow-y: hidden;
                 .guarantee_icon{
-                    width: px2v(214);
-                    height: px2v(214);
+                    @include size(214,214);
                     margin: px2v(60) 0 px2v(20) 0;
                 }
                 .guarantee_content{
-                    font-weight: 500;
-                    font-size: px2v(25);
+                    @include font(500,25);
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:480px){
+    .guarantees{
+        @include mobile_size(480,1033);
+        .guarantees_container{
+            .guarantees_header{
+                @include mobile_header;
+                padding: m_px2v(36) 0 m_px2v(50);
+            }
+            .guarnees_content{
+                flex-direction: column;
+                gap: m_px2v(65.5);
+                .guarantee{
+                    @include mobile_size(254,223.5);
+                    border: m_px2v(3) solid #002361;
+                    border-radius: m_px2v(25);
+                    margin: 0 auto;
+                    .guarantee_icon{
+                        @include mobile_size(109,109);
+                        margin: m_px2v(33.5) 0 m_px2v(5);
+                    }
+                    .guarantee_content{
+                        @include mobile_font(500,15);
+                        margin: 0 m_px2v(26);
+                    }
+                }
+                .guarantee:nth-child(2n){
+                    @include mobile_size(254,250);
                 }
             }
         }
