--- a/styles_scss/_a.scss
+++ b/styles_scss/_a.scss
@@ -1,26 +1,35 @@
-a {
-    color: #002361;
-    position: relative;
-    cursor: pointer;
-}
-a:after {
-    content: "";
-    display: block;
-    position: absolute;
-    right: 0;
-    width: 0;
-    height: 2px;
-    background-color: #002361; 
-    transition: width 0.5s;
-}
-
-a:hover:after {
-    content: "";
-    width: 100%;
-    display: block;
-    position: absolute;
-    left: 0;
-    height: 2px;
-    background-color: #002361;
-    transition: width 0.5s;
+@media screen and (min-width:480px){
+    a.line_effect{
+        position: relative;
+        cursor: pointer;
+        &.line_effect:after {
+            content: "";
+            display: block;
+            position: absolute;
+            right: 0;
+            width: 0;
+            height: px2v(2);
+            background-color: #002361; 
+            transition: width 0.5s;
+        }
+        &.line_effect:hover:after {
+            content: "";
+            width: 100%;
+            display: block;
+            position: absolute;
+            left: 0;
+            height: px2v(2);
+            background-color: #002361;
+            transition: width 0.5s;
+        }
+    }
+    
+    a.scale_effect{
+        @include font(500,25);
+        transition: .4s ease-in-out;
+        &:hover{
+            cursor: pointer;
+            transform: scale(1.2);
+        }
+    }
 }
