--- a/styles_scss/_banner.scss
+++ b/styles_scss/_banner.scss
@@ -1,14 +1,31 @@
 .banner{
-    @include section_size(1920,862);
+    @include size(1920,862);
     background-image: url("/assets/banner.png");
+    margin-top: px2v(165);
     .banner_container{
-        padding-left: 5%;
-        padding-top: 15%;
+        padding-left: px2v(89);
+        padding-top: px2v(354);
         h1{
             color: #fff;
-            font-weight: 700;
-            font-size: px2v(70);
+            @include font(700,70);
             width: px2v(1500);
+        }
+    }
+}
+
+@media screen and (max-width:480px){
+    .banner{
+        @include mobile_size(480,265);
+        background-image: url("/assets/mobile_banner.png");
+        margin-top: m_px2v(70);
+        .banner_container{
+            padding-left: m_px2v(36);
+            padding-top: m_px2v(109);
+            h1{
+                color: #fff;
+                @include mobile_font(700,20);
+                width: m_px2v(409);
+            }
         }
     }
 }
